Add unit tests for Spark.